previous/test-1/me/istio/gateway-virtualrouting/gateway-virtual-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-svc
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-lb-svc
        port:
          number: 80
          #  weight: 50
      #    - destination:
      #  host: app1
      #  port:
      #   number: 80
          # weight: 50
